--- a/.github/workflows/dependency.yml
+++ b/.github/workflows/dependency.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
@@ -24,7 +25,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: simple-web-server
+        working-directory: simple-web-server   # ✅ must align with run, not indented inside it
 
       - name: Run tests
         run: npm test
+        working-directory: simple-web-server   # ✅ also apply here if your tests are in same folder
